# test-tasks

./: .editorconfig  .gitignore  README.md
poi-on-map/: CMakeLists.txt  README.md  poi_on_map_main.cc  point_cartesian.cpp  point_cartesian.h  point_poi-inl.h  point_polar.cpp  point_polar.h  sample_input  shape_circle.cpp  shape_circle.h  shape_rectangle.cpp  shape_rectangle.h
